#cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
#project(gpopt LANGUAGES CXX C)
SET(GP_XERCES_SOURCE_DIR "${ClickHouse_SOURCE_DIR}/contrib/gp-xerces/src")
#SET(GP_XERCES_SOURCE_DIR "/data3/liangjiabiao/ClickHouse-bigo/contrib/gp-xerces/src")

set (UTIL_SOURCES
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/Base64.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/BinFileInputStream.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/BinInputStream.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/BinMemInputStream.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/BitSet.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/DefaultPanicHandler.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/EncodingValidator.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/HeaderDummy.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/HexBin.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/KVStringPair.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/Mutexes.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/PanicHandler.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/PlatformUtils.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/PSVIUni.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/QName.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/regx/ASCIIRangeFactory.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/regx/BlockRangeFactory.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/regx/BMPattern.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/regx/CharToken.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/regx/ClosureToken.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/regx/ConcatToken.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/regx/Match.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/regx/Op.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/regx/OpFactory.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/regx/ParenToken.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/regx/ParserForXMLSchema.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/regx/RangeFactory.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/regx/RangeToken.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/regx/RangeTokenMap.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/regx/RegularExpression.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/regx/RegxParser.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/regx/RegxUtil.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/regx/StringToken.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/regx/Token.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/regx/TokenFactory.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/regx/UnicodeRangeFactory.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/regx/UnionToken.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/regx/XMLRangeFactory.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/regx/XMLUniCharacter.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/StringPool.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/SynchronizedStringPool.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/TransService.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/XMemory.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/XML256TableTranscoder.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/XML88591Transcoder.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/XMLAbstractDoubleFloat.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/XMLASCIITranscoder.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/XMLBigDecimal.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/XMLBigInteger.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/XMLChar.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/XMLChTranscoder.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/XMLDateTime.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/XMLDouble.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/XMLEBCDICTranscoder.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/XMLException.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/XMLFloat.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/XMLIBM1047Transcoder.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/XMLIBM1140Transcoder.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/XMLInitializer.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/XMLMsgLoader.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/XMLNumber.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/XMLString.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/XMLStringTokenizer.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/XMLUCS4Transcoder.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/XMLUni.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/XMLUri.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/XMLURL.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/XMLUTF16Transcoder.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/XMLUTF8Transcoder.cpp"
  "${GP_XERCES_SOURCE_DIR}/xercesc/util/XMLWin1252Transcoder.cpp")

MESSAGE(STATUS "util_sources:" ${UTIL_SOURCES})
SET(DOM_SOURCES
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/DOMException.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/DOMLSException.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/DOMRangeException.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/DOMXPathException.cpp")

SET(DOMIMPL_SOURCES
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMAttrImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMAttrMapImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMAttrNSImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMCDATASectionImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMCharacterDataImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMChildNode.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMCommentImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMConfigurationImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMDeepNodeListImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMDocumentFragmentImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMDocumentImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMDocumentTypeImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMElementImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMElementNSImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMEntityImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMEntityReferenceImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMErrorImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMImplementationImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMImplementationListImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMImplementationRegistry.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMLocatorImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMNamedNodeMapImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMNodeIDMap.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMNodeImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMNodeIteratorImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMNodeListImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMNodeVector.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMNormalizer.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMNotationImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMParentNode.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMProcessingInstructionImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMRangeImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMStringListImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMStringPool.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMTextImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMTreeWalkerImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMTypeInfoImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMLSSerializerImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMLSInputImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMLSOutputImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMXPathExpressionImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMXPathNSResolverImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/DOMXPathResultImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/dom/impl/XSDElementNSImpl.cpp")

SET(FRAMEWORK_SOURCE
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/BinOutputStream.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/LocalFileFormatTarget.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/LocalFileInputSource.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/MemBufFormatTarget.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/MemBufInputSource.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/psvi/PSVIAttribute.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/psvi/PSVIAttributeList.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/psvi/PSVIElement.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/psvi/PSVIItem.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/psvi/XSAnnotation.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/psvi/XSAttributeDeclaration.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/psvi/XSAttributeGroupDefinition.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/psvi/XSAttributeUse.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/psvi/XSComplexTypeDefinition.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/psvi/XSElementDeclaration.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/psvi/XSFacet.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/psvi/XSIDCDefinition.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/psvi/XSModel.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/psvi/XSModelGroup.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/psvi/XSModelGroupDefinition.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/psvi/XSMultiValueFacet.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/psvi/XSNamespaceItem.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/psvi/XSNotationDeclaration.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/psvi/XSObject.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/psvi/XSParticle.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/psvi/XSSimpleTypeDefinition.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/psvi/XSTypeDefinition.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/psvi/XSValue.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/psvi/XSWildcard.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/StdInInputSource.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/StdOutFormatTarget.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/URLInputSource.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/Wrapper4DOMLSInput.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/Wrapper4InputSource.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/XMLAttDef.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/XMLAttDefList.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/XMLAttr.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/XMLBuffer.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/XMLBufferMgr.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/XMLContentModel.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/XMLDTDDescription.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/XMLElementDecl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/XMLEntityDecl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/XMLFormatter.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/XMLGrammarDescription.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/XMLGrammarPoolImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/XMLNotationDecl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/XMLRecognizer.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/XMLRefInfo.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/XMLSchemaDescription.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/framework/XMLValidator.cpp")

SET(INTERNAL_SOURCES
	"${GP_XERCES_SOURCE_DIR}/xercesc/internal/BinFileOutputStream.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/internal/BinMemOutputStream.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/internal/DGXMLScanner.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/internal/ElemStack.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/internal/IGXMLScanner.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/internal/IGXMLScanner2.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/internal/MemoryManagerImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/internal/ReaderMgr.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/internal/SGXMLScanner.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/internal/ValidationContextImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/internal/VecAttributesImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/internal/VecAttrListImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/internal/WFXMLScanner.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/internal/XMLReader.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/internal/XMLScanner.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/internal/XMLScannerResolver.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/internal/XProtoType.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/internal/XSAXMLScanner.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/internal/XSerializeEngine.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/internal/XSObjectFactory.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/internal/XTemplateSerializer.cpp")

SET(PARSERS_SOURCES
	"${GP_XERCES_SOURCE_DIR}/xercesc/parsers/AbstractDOMParser.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/parsers/DOMLSParserImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/parsers/SAX2XMLFilterImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/parsers/SAX2XMLReaderImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/parsers/SAXParser.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/parsers/XercesDOMParser.cpp")

SET(SAX_SOURCES
	"${GP_XERCES_SOURCE_DIR}/xercesc/sax/Dummy.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/sax/InputSource.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/sax/SAXException.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/sax/SAXParseException.cpp")

SET(SAX2_SOURCES "${GP_XERCES_SOURCE_DIR}/xercesc/sax2/sax2Dummy.cpp")

SET(VALIDATORS_SOURCES
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/common/AllContentModel.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/common/CMAny.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/common/CMBinaryOp.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/common/CMUnaryOp.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/common/ContentLeafNameTypeVector.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/common/ContentSpecNode.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/common/DFAContentModel.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/common/Grammar.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/common/GrammarResolver.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/common/MixedContentModel.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/common/SimpleContentModel.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/AbstractNumericFacetValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/AbstractNumericValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/AbstractStringValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/AnySimpleTypeDatatypeValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/AnyURIDatatypeValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/Base64BinaryDatatypeValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/BooleanDatatypeValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/DatatypeValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/DatatypeValidatorFactory.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/DateDatatypeValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/DateTimeDatatypeValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/DateTimeValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/DayDatatypeValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/DecimalDatatypeValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/DoubleDatatypeValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/DurationDatatypeValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/ENTITYDatatypeValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/FloatDatatypeValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/HexBinaryDatatypeValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/IDDatatypeValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/IDREFDatatypeValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/ListDatatypeValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/MonthDatatypeValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/MonthDayDatatypeValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/NameDatatypeValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/NCNameDatatypeValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/NOTATIONDatatypeValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/QNameDatatypeValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/StringDatatypeValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/TimeDatatypeValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/UnionDatatypeValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/XMLCanRepGroup.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/YearDatatypeValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/datatype/YearMonthDatatypeValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/DTD/DTDAttDef.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/DTD/DTDAttDefList.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/DTD/DTDElementDecl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/DTD/DTDEntityDecl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/DTD/DTDGrammar.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/DTD/DTDScanner.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/DTD/DTDValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/DTD/XMLDTDDescriptionImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/ComplexTypeInfo.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/GeneralAttributeCheck.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/identity/FieldActivator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/identity/FieldValueMap.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/identity/IC_Field.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/identity/IC_Key.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/identity/IC_KeyRef.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/identity/IC_Selector.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/identity/IC_Unique.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/identity/IdentityConstraint.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/identity/IdentityConstraintHandler.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/identity/ValueStore.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/identity/ValueStoreCache.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/identity/XercesXPath.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/identity/XPathMatcher.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/identity/XPathMatcherStack.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/identity/XPathSymbols.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/NamespaceScope.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/SchemaAttDef.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/SchemaAttDefList.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/SchemaElementDecl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/SchemaGrammar.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/SchemaInfo.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/SchemaSymbols.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/SchemaValidator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/SubstitutionGroupComparator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/TraverseSchema.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/XercesAttGroupInfo.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/XercesElementWildcard.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/XercesGroupInfo.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/XMLSchemaDescriptionImpl.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/XSDDOMParser.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/XSDErrorReporter.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/XSDLocator.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/validators/schema/XUtil.cpp")

SET(XINCLUDE_SOURCES
	"${GP_XERCES_SOURCE_DIR}/xercesc/xinclude/XIncludeDOMDocumentProcessor.cpp"
    "${GP_XERCES_SOURCE_DIR}/xercesc/xinclude/XIncludeLocation.cpp"
    "${GP_XERCES_SOURCE_DIR}/xercesc/xinclude/XIncludeUtils.cpp")

SET(SOCKET_SOURCES
	"${GP_XERCES_SOURCE_DIR}/xercesc/util/NetAccessors/Socket/SocketNetAccessor.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/util/NetAccessors/Socket/UnixHTTPURLInputStream.cpp"
	"${GP_XERCES_SOURCE_DIR}/xercesc/util/NetAccessors/BinHTTPInputStreamCommon.cpp")

SET(ICU_SOURCES
	"${GP_XERCES_SOURCE_DIR}/xercesc/util/Transcoders/ICU/ICUTransService.cpp")

SET(MSGINMEMORY_SOURCES
    "${GP_XERCES_SOURCE_DIR}/xercesc/util/MsgLoaders/InMemory/InMemMsgLoader.cpp")

SET(POSIXMMGR_SOURCES
    "${GP_XERCES_SOURCE_DIR}/xercesc/util/MutexManagers/PosixMutexMgr.cpp")

SET(POSIXFMGR_SOURCES
    "${GP_XERCES_SOURCE_DIR}/xercesc/util/FileManagers/PosixFileMgr.cpp")

SET(STR_UTIL_SOURCES
    "${GP_XERCES_SOURCE_DIR}/stricmp.c"
    "${GP_XERCES_SOURCE_DIR}/strnicmp.c"
    "${GP_XERCES_SOURCE_DIR}/towlower.c"
    "${GP_XERCES_SOURCE_DIR}/towupper.c")

add_compile_definitions(HAVE_CONFIG_H)
add_library(_xerces-c STATIC ${UTIL_SOURCES} ${DOM_SOURCES} ${DOMIMPL_SOURCES} ${FRAMEWORK_SOURCE} ${INTERNAL_SOURCES} ${PARSERS_SOURCES} ${SAX2_SOURCES} ${SAX_SOURCES} ${VALIDATORS_SOURCES} ${XINCLUDE_SOURCES} ${SOCKET_SOURCES} ${ICU_SOURCES} ${MSGINMEMORY_SOURCES} ${POSIXMMGR_SOURCES} ${POSIXFMGR_SOURCES} ${STR_UTIL_SOURCES})
add_library(ch_contrib::gpxerces ALIAS _xerces-c)
target_include_directories(_xerces-c SYSTEM BEFORE PUBLIC "${ClickHouse_SOURCE_DIR}/contrib/icu/icu4c/source/common/")
target_include_directories(_xerces-c SYSTEM BEFORE PUBLIC "${GP_XERCES_SOURCE_DIR}")
target_include_directories(_xerces-c SYSTEM BEFORE PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
